--- a/Project2/project2.css
+++ b/Project2/project2.css
@@ -10,8 +10,23 @@
 a{
     text-decoration: none;
 }
-.p_align
-{	font-family: Helvetica, Arial;
+li{
+	list-style: none;
+}
+body{
+	font-family: "Helvetica";
+}
+@font-face {
+    font-family: "HelveticaRegular";
+    src:url("fonts/HelveticaRegular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+    }
+@font-face {
+    font-family: "HelveticaBold";
+    src:url("fonts/HelveticaBold.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
 }
 .header{
 	background-color: #3498db;
@@ -27,6 +42,7 @@ a{
 	height:55px;
 	float: left;
 	margin-top: 11px;
+	margin-right: 16px;
 }
 .logo img{
 	width: 100%;
@@ -37,7 +53,6 @@ a{
 	font-family: Helvetica;
 	font-size:26px;
 	line-height: 77px;
-	width: 220px;
 	float: left;
 }
 .header_connect{
@@ -68,26 +83,252 @@ a{
 .banner{
 	height: 350px;
 	background-image: url(img/banner_bg.jpg);
+	background-repeat: no-repeat;	
 	border-bottom: 1px solid #8faec3;
 }
 .banner_cont{
 	width: 1000px;
 	margin: 0 auto;
 }
+.banner_cont h1{
+color: #fff;
+font-size: 50px;
+position: relative;
+}
+.welcome{
+	padding-top: 76px;
+	font-family: 'Helvetica';
+	font-weight: bold;
+}
+.welcom_words{
+	color: #fff;
+	font-size: 30px;
+	font-family:"Helvetica";
+	
+}
+.reg_form{
+	width: 360px;
+	height: 536px;
+	border-bottom: 5px solid #3498db;
+	position: absolute;
+	background-color: #fff;
+	margin-left: 640px;
+	margin-top: 30px;
+	z-index: 999;
+}
+.reg_title{
+	font-size: 25px;
+	color: #333333;
+	text-align: center;
+	margin:30px 0;
+}
+.reg_form input{
+	width: 304px;
+	height: 34px;
+	border: 1px solid #e6e6e6;
+	background-color: #f2f2f2;
+	font-size: 15px;
+	line-height: 34px;
+	padding-left: 14px;
+}
+.reg_form .adress{
+	height: 74px;
+}
+.reg_form li{
+	padding-bottom: 9px;
+	margin-left: 20px;
+}
+.button{
+	width: 220px;
+	height: 50px;
+	background-color: #e74c3c;
+	margin: 15px 0 0 60px;
+	color: #fff;
+	font-size: 25px;
+	}
+.button:hover{
+	background-color: #3498db;
+	color: #fff;
+}
 .cont_history{
 	background-color: #f2f2f2;
 	height: 249px;
-	border-bottom: 1px solid #f2f2f2;
+	border-bottom: 2px solid #f2f2f2;
 }
 .cont_history_cont{
 	width: 1000px;
 	margin: 0 auto;
 }
+.cont_history_cont {
+	color: #333333;
+	font-size: 13px;
+}
+.un_name{
+	color:#333333; 
+	font-size:15px;
+	font-weight: bold;
+	padding: 34px 0 24px 0;
+}
 .main_cont{
 	height: 788px;
 	background-color: #fff;
 }
-.main_cont_cont{
+.main_cont_top{
 	width: 1000px;
 	margin: 0 auto;
+	height: 531px;
+	border-bottom: 1px solid #f2f2f2;
+	text-align: center;
+	font-size: 13px;
+}
+.title_cont{
+	padding: 39px 0 33px 0;
+	color: #3498db;
+	text-align: left;
+	font-size: 25px;
+}
+.qa_envir{
+	width: 290px;
+	float: left;
+	padding-right: 60px;
+
+	
+}
+.qa_title{
+	font-size: 15px;
+	font-family: "Helvetica";
+	font-weight: bold;
+	padding: 32px 0px 24px 0;
+}
+.qa_text{
+	color: #333333;
+	font-size: 13px;
+}
+.qa_prog{
+	width: 290px;
+	float: left;
+	padding-right: 60px;
+}
+.envir_view{
+	width: 52px;
+	height: 52px;
+	border: 1px solid #e6e6e6;
+	border-radius: 100px;
+	overflow: hidden;
+	margin-top: 26px;
+
+}
+.envir_view p{
+	color: #333333;
+	font-size: 13px;
+	text-align: center;
+	line-height: 52px;
+
+}
+.envir_view:hover{
+	background-color:#fff; 
+	border-color: #3498db;
+}
+.envir_view p:hover{
+	color: #3498db;
+	font-weight: bold;
+
+}
+.main_cont_bot{
+	width: 1000px;
+	height: 256px;
+	margin: 0 auto;
+}
+.stud_says{
+		margin:40px 0 30px 0;
+		float: left;
+		color: #3498db;
+		font-size: 25px;
+		text-transform: uppercase;
+}
+.stud_word{
+	font-size: 13px;
+	color: #333333;
+}
+.author{
+	float: right;
+	margin-right: 300px;
+	font-weight: bold;
+}
+.top_quote{
+	font-size: 50px;
+	font-family: 'HelveticaBold';
+	color: #f2f2f2;
+	font-weight: bold;
+}
+.bot_quote{
+	font-size: 50px;
+	font-family: 'HelveticaBold';
+	color: #f2f2f2;
+	font-weight: bold;
+}
+.round{
+	height: 50px;
+	width: 50px;
+	background-color: #fff;
+	border:1px solid #e7e7e7;
+	float: right;
+	border-radius: 100px;
+	margin-left: 3px;
+}
+.round:hover{
+	background-color: #f2f2f2;
+	border-color: #3498db;
+}
+.round img{
+margin: 15px 0 0 15px;
+}
+.round1 img{
+margin: 15px 0 0 15px;
+}
+.round1{
+	height: 50px;
+	width: 50px;
+	background-color: #fff;
+	border:1px solid #e7e7e7;
+	float: right;
+	border-radius: 100px;
+}
+.round1:hover{
+	background-color: #f2f2f2;
+	border-color: #3498db;
+}
+.clr{
+	clear: both;
+}
+.bot_start{
+	height: 190px;
+	background-color: #f2f2f2;
+}
+.bot_start_cont{
+	width: 1000px;
+	margin: 0 auto;	
+}
+.yang_men{
+		position: absolute;
+		margin: 83px 0 0 690px;
+}
+.bot_but{
+	margin-top: 68px;
+	height: 60px;
+	width: 549px;
+	background-color: #e74c3c;
+	font-size: 25px;
+	color: #fff;
+	text-transform: uppercase;
+	font-family: 'Helvetica'
+}
+footer{
+	height: 193px;
+	background-color: #3498db;
+	border-top: 1px solid #99c8e7;
+}
+.foot_cont{
+	width: 1000px;
+	margin: 0 auto
 }
