--- a/Project2/main.css
+++ b/Project2/main.css
@@ -71,10 +71,12 @@ float: right;
 	display: inline-block;
 	width: 24px;
 	height: 24px;
-
-
+	border-radius: 50%;
 }
-
+.sn li:hover{
+	box-shadow: 0 0 10px rgba(255,255,255,0.9);
+	cursor: pointer;
+}
 .sn .g{
 	background-position: -24px 0;
 }
@@ -174,6 +176,7 @@ position: relative;
 	margin-top: 11px;
 	padding: 0;
 	margin-left: 55px;
+	cursor: pointer;
 	}
 #button:hover{
 	background-color: #d24436;
@@ -359,6 +362,7 @@ cite::after {
 	background-color: #e74c3c;
 	font-size: 25px;
 	text-transform: uppercase;
+	cursor: pointer;
 	}
 .click_on_but{
 	line-height: 56px;
