--- a/Project2/main.css
+++ b/Project2/main.css
@@ -27,13 +27,13 @@ header{
 }
 .logo{
 	width: 53px;
-	height: 43px;
+	height: 39px;
 	float: left;
     border: 2px solid #fff;
-    font-size: 24px;
+    font-size: 22px;
     text-align: center;
     margin: 13px 14px 0 0;
-    padding-top: 10px;
+    padding-top: 13px;
     border-radius: 50px;
     cursor: default;
     color: #fff;
@@ -45,8 +45,7 @@ header{
 	color: #fff;
 	font-size:26px;
 	float: left;
-	margin-top: 29px;	
-	font-weight:bold;
+	margin-top: 28px;	
 	text-transform: uppercase;
 }
 .clr{
@@ -61,6 +60,7 @@ header{
 	margin-top: 5px;
 	color: white;
 	padding-right: 8px;
+	font-size: 13px;
 }
 .sn{
 	float: right;	
@@ -109,6 +109,7 @@ header{
 	color: white;
 }
 .welcom_words{
+	margin-top: 7px;
 	color: #fff;
 	font-size: 30px;
 	width: 560px;
@@ -128,7 +129,7 @@ header{
 	font-size: 25px;
 	color: #333333;
 	text-align: center;
-	margin:30px 0;
+	margin:30px auto;
 }
 .reg_form .reg{
 	width: 304px;
@@ -144,9 +145,12 @@ header{
 	height: 37px;
 	border: 1px solid #e6e6e6;
 	background-color: #f2f2f2;
+	font-size: 15px;
+	padding-left: 8px;
 }
 .reg_form .reg:focus{
-	border: #b8e3ff;
+	border: 1px solid #b8e3ff;
+
 }
 .reg::-webkit-input-placeholder {
   color: #333333;
@@ -154,9 +158,6 @@ header{
 .reg:-ms-input-placeholder {
   color: #333333;
     }
-.reg_form .adress{
-	height: 74px;
-}
 .reg_form li{
 	padding-bottom: 9px;
 	margin-left: 20px;
@@ -170,9 +171,7 @@ header{
 	background: #e74c3c;
 	color: #fff;
 	font-size: 25px;
-	margin-top: 11px;
-	padding: 0;
-	margin-left: 55px;
+	margin: 11px 0 0 55px;
 	cursor: pointer;
 	}
 #button:hover{
@@ -199,14 +198,18 @@ header{
 	font-size:15px;
 	font-weight: bold;
 	padding: 34px 0 24px 0;
+	text-transform: uppercase;
 }
 .main_history_text{
-	width: 570px;
+	width: 580px;
 	float: left;
+	line-height: 20px;
+	font-size: 13px;
+
 }
 /*WHY WE?*/
 .main_cont_top{
-	height: 531px;
+	height: 551px;
 	border-bottom: 1px solid #f2f2f2;
 	text-align: center;
 	font-size: 13px;
@@ -230,6 +233,7 @@ header{
 .qa_text, .qa_prog_text, .ex_text{
 	color: #333333;
 	font-size: 13px;
+	line-height: 20px;
 }
 .qa_prog{
 	width: 290px;
@@ -297,7 +301,12 @@ header{
 	color: #333333;
 	float: left;
 	width: 733px;
+	line-height: 20px;
+	margin-top: 20px;
 }
+.main_history_text{
+	width: 590px;
+	}
 .round{
 	height: 40px;
 	width: 40px;
@@ -358,7 +367,7 @@ cite::after {
 }
 .yang_men{
 	position: absolute;
-	right: 48px;
+	right: 30px;
 	top: -173px;
 	z-index: 99;
 }
@@ -408,7 +417,7 @@ footer{
 	height: 47px;
 	border: 2px solid white;
 	border-radius: 50px;
-	font-size: 27px;
+	font-size: 28px;
 	color: white;
 	float: left;
 	padding-top: 20px;
@@ -437,6 +446,7 @@ box-shadow: 0 0 10px rgba(255,255,255,0.9);
 	margin-top: 5px;
 	color: white;
 	padding-right: 8px;
+	font-size: 13px;
 }
 .sn{
 	float: left;	
@@ -478,11 +488,11 @@ body{
 	width: 200px;
 }
 .welcome{
-	font-size: 40px;
+	font-size: 45px;
 }
 .welcom_words{
 	font-size: 25px;
-	width: 380px;
+	width: 390px;
 }
 .main_history_text{
 	width: 390px;
@@ -608,13 +618,13 @@ header{
 	width: 250px;
 	line-height: 30px;
 	text-align: center;
+
 }
 .reg_form{
 	width: 300px;
 	margin: 0;
 	float: none;
-	left: 19px;
-	top: 350px;
+	top: 370px;
 }
 .reg_form .reg{
 	width: 244px;
@@ -630,6 +640,7 @@ header{
 .cont_history{
 	padding-top: 370px;
 	padding-left: 15px;
+	height: 300px;
 }
 .main_history_text{
 	width: 275px;
@@ -637,7 +648,11 @@ header{
 
 }
 .un_name{
+	margin: 40px 0 24px 0;
+	padding: 0;
 	text-align: center;
+	width: 290px;
+	
 }
 .main_history_text{
 	text-align: center;
@@ -689,7 +704,8 @@ header{
 }
 .stud_says{
 	font-size: 20px;
-	margin-left: 10px;
+	width: 320px;
+	text-align: center;
 }
 .stud_word{
 	width: 288px;
@@ -741,6 +757,7 @@ footer{
 .logo_bot{
 	float: none;
 	margin: 30px 0 10px 40px;
+
 }
 .un_bot_name{
 	margin: 0;
