--- a/Ukrbud/style.css
+++ b/Ukrbud/style.css
@@ -7,175 +7,362 @@
 body{
 	background-color: #041556;
 	font-size: 16px;
-
 	width: 100%;
 }	
-#wrapper{
-	height: auto;
-	margin: 0 auto;	
-	}
-.header_cont, .content, .footer_cont{
-	margin: 0 auto;	
-	width: 1020px;
-}
 header{
 	border-top: 15px solid #041556;
 	background-color: white;
 }
-.header_cont{
-	height: 110px;
+.header-cont{
+	margin: 0 auto;	
+	width: 940px;
+	height: 80px;
 }
-.logo_name{
+.logo-name{
 	font-size: 20px;
 	text-transform: uppercase;
 	font-family: 'Open Sans Condensed', sans-serif;
 	float: left;
+	border-bottom: 2px solid green;
 }
-.l_name{
-	font-size: 50px;
+.l-name{
+	font-size: 40px;
 	font-family: 'Lobster', cursive;
 	text-transform: none;
 }
 .logo{
-	width: 120px;
-	height: 100px;
+	width: 80px;
+	height: 60px;
 	float: right;
-	position: relative;
-}
+	padding-right: 20px;
+	}
 .logo img{
-	width: 120px;
-	height: 100px;
+	width: 80px;
+	height: 60px;
 }
-.clr{
-	clear: both;
-}
-.logo_text{
+.logo-text{
 	font-size: 20px;
 	
 }
-.main_container{
-	background-color: #f2f2f2;
-}
-.content{
-	height: 592px;
-}
-
-.m_slider0, .m_slider1, .m_slider2, .m_slider3, .m_slider4, .m_slider5{
-	width: 320px;
-	height: 280px;
-	border: 3px solid #c1c1c1;
-	overflow: hidden;
-	float: left;
-	border-radius: 10px;
-
-}
-.m_slider0:hover{
-	border-color: #fff;
-	}
-.m_slider1:hover{
-	border-color: #fff;
-	}
-.m_slider2:hover{
-	border-color: #fff;
-	}
-.slider_top{
-	height: 284px;
-}
-.m_slider0, .m_slider1{
-	margin-right: 21px;
-}
-.m_slider3:hover{
-	border-color: #fff;
-	}
-	.m_slider4:hover{
-	border-color: #fff;
-	}
-	.m_slider5:hover{
-	border-color: #fff;
-	}
 .clr{
 	clear: both;
 }
-nav{
-	width: 1020px;
-	height: 80px;
-	background-color: #041556;
-	position: absolute;
-	opacity: 0.8;
-	top: 380px;
-}
-.nav_bar{
-	position: relative;
-}
-.nav_bar ul li{
-	float: left;
-	line-height: 80px;
-}
- .nav_bar ul li a{
-	text-align: center;
-	display: block;
-	padding:0 25px;
-	color: white;
-	font-size: 21px;
-	font-weight: bold;
-}
-.nav_bar li a:hover{
-	background-color: #020a2b;
-}
-#drop_menu{
-	top: 80px;
-	background-color: #091130;
-	position: absolute;
-
-}
-#drop_menu li a{
-	line-height: 60px;
-	font-size: 16px;
-	color: white;
-	font-weight: bold;
-	border-right: 2px solid #595a5c;
-}
-#drop_menu li a:hover{
-	background-color: #041556;
-}
-#drop_menu{
-	display: none;
-}
-.nav_bar li:hover #drop_menu{
-	display: block;
-}
-.social_net{
-margin-right: 20px;
-}
-.social_net ul li{
-	float: right;
-	color: white;
-	font-weight: bold;
-	padding-top: 30px;
-	padding-right: 10px;
+#nav {            
+    height: 42px;
+    line-height: 42px;            
+    width: 940px;
+    margin: 0 auto;
 }
 
-.slider_bot{
-	height: 284px;
-	margin-top: 20px;
+#nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
-.m_slider3, .m_slider4{
-	margin-right: 21px;
+
+#nav li {    
+    background-image: -o-linear-gradient(bottom, #111111 0%, #333333 100%);
+    background-image: -moz-linear-gradient(bottom, #111111 0%, #333333 100%);
+    background-image: -webkit-linear-gradient(bottom, #111111 0%, #333333 100%);
+    background-image: -ms-linear-gradient(bottom, #111111 0%, #333333 100%);    
+    background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, #111111),color-stop(1, #333333));    
+    background-image: linear-gradient(bottom, #111111 0%, #333333 100%);
+    float: left;
+    position: relative;
+    width: 20%;    
 }
+
+#nav li:first-child, #nav li:first-child a { 
+    -webkit-border-radius: 3px 0 0 3px; 
+    -moz-border-radius: 3px 0 0 3px; 
+    border-radius: 3px 0 0 3px; 
+}
+#nav li:last-child, #nav li:last-child a { 
+    -webkit-border-radius: 0 3px 3px 0; 
+    -moz-border-radius: 0 3px 3px 0; 
+    border-radius: 0 3px 3px 0; 
+}
+
+#nav a {                
+    border-right: 1px solid #222;
+    border-left: 1px solid #555;
+    color: #ccc;
+    display: block;
+    font-size: 16px;	
+    height: 50px;
+    overflow: hidden;
+    text-align: center;
+    text-shadow: 0 -1px 0 #000;    
+    -webkit-box-shadow: inset 0 0 10px transparent;
+    -moz-box-shadow: inset 0 0 10px transparent;
+}
+
+#nav a:after {
+    background: rgba(255,255,255,.07);
+    content: "";
+    height: 25px;
+    left: 0;
+    position: absolute;
+    width: 100%;
+}
+
+#nav li:hover > a {
+    background: #333;
+    border-left-color: #222;
+    color: #fff;
+    text-shadow: 0 1px 0 #000;
+    -webkit-box-shadow: inset 0 0 10px #111;
+    -moz-box-shadow: inset 0 0 10px #111;
+    box-shadow: inset 0 0 10px #111;
+}
+#nav span {
+    position: relative;    
+}
+
+#nav a:active span {
+    color: #ffd;
+    position: relative;
+    top: 1px;
+}
+
+#nav li:first-child a {
+    border-left: none;    
+}
+
+#nav li:last-child a {
+    border-right: none;    
+}
+
+.dropdown > a span:after {
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid #ccc;
+    content: "";
+    right: -13px;
+    position: absolute;
+    top: 3px;
+}
+
+.dropdown:hover > a span:after {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #fff;
+    content: "";
+    right: -15px;
+    position: absolute;
+    top: 6px;
+}
+
+/*============================*/
+/* Sub Navigation
+/*============================*/
+#nav ul ul {
+    opacity: 0;
+    position: absolute;
+    top: 50px;
+    visibility: hidden;
+    width: 0;
+    -moz-transition: all 300ms ease-out;
+    -webkit-transition: all 300ms ease-out; 
+    -ms-transition: all 300ms ease-out; 
+    transition: all 300ms ease-out;
+    z-index: 100;
+}
+
+#nav ul li:hover ul {
+    opacity: 1;
+    visibility: visible;
+    width: 100%;
+    z-index: 999;
+}
+
+#nav ul ul li {
+    background: #f3f3f3;
+    float: none;    
+    line-height: 0;
+    width: 100%;
+
+
+}
+
+#nav ul ul li:nth-child(odd) {
+    background: #eee;    
+}
+
+#nav ul ul li:first-child, #nav ul ul li:first-child a { 
+    -webkit-border-radius: 0; 
+    -moz-border-radius: 0; 
+    border-radius: 0; 
+}
+#nav ul ul li:last-child, #nav ul ul li:last-child a { 
+    -webkit-border-radius: 0 0 3px 3px; 
+    -moz-border-radius: 0 0 3px 3px; 
+    border-radius: 0 0 3px 3px; 
+}
+
+#nav ul ul li a {
+    border-right: none;
+    border-left: none;
+    border-top: 1px solid #fff;
+    color: #555;
+    font-size: 14px;
+    height: 36px;
+    line-height: 36px;
+    padding: 0 0 0 15px;
+    text-align: left;
+    text-shadow: 0 -1px 0 #eee;
+
+}
+
+#nav ul li ul li a:after {
+    background: rgba(0,0,0,.02);
+    content: "";
+    height: 18px;
+    left: 0;
+    position: absolute;
+    top: 19px;
+    width: 100%;
+}
+
+#nav ul ul li a:hover {
+    background: #ffd;
+    color: #111;
+    text-shadow: 0 1px 0 #fff;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+}
+
+#nav ul ul a:active span {
+    color: #111;
+    position: relative;
+    top: 1px;
+}
+
+
+.container {
+	width: 940px;
+	height: 475px;
+	margin:0 auto;
+	}
+		.item {
+			text-align:center;
+			float:left;
+			margin:6px;
+			position:relative;			
+		}
+		
+			.item,
+			.item-hover,
+			.item-hover .mask,
+			.item-img,
+			.item-type-move .item-info {
+				width: 300px;
+				height: 225px;						
+			}
+
+			.item-hover,
+			.item-hover .mask,
+			.item-img { 
+				position:absolute;
+				top:0;
+				left:0;			
+			}			
+		
+			.item-type-move .item-hover {	
+				-webkit-transition: all 300ms ease-out;
+				-moz-transition: all 300ms ease-out;
+				-o-transition: all 300ms ease-out;
+				transition: all 300ms ease-out;	
+				opacity:0;
+				cursor:pointer;		
+				z-index:100;
+			}
+			
+				.item-type-move .item-info {
+					color:#ffffff;
+					position:relative;
+					z-index:5;			
+					overflow:hidden;			
+				}
+			
+				.item-type-move .item-info .headline,
+				.item-type-move .item-info .downline {
+					width: 100%;
+					position:absolute;
+					-webkit-transition: all 300ms ease-out;
+					-moz-transition: all 300ms ease-out;
+					-o-transition: all 300ms ease-out;
+					transition: all 300ms ease-out;		
+					-webkit-box-sizing: border-box;
+					-moz-box-sizing: border-box;
+					-o-box-sizing: border-box;	
+					padding:0 10px;															
+				}				
+
+				.item-type-move .item-info .headline {
+					font-size:22px;			
+					top:10px;							
+				}
+				
+				.item-type-move .item-info .downline {
+					font-size:18px;
+					font-style:italic;
+					bottom:10px;																		
+				}
+								
+				.item-type-move .item-info .line {
+					 height:1px;
+					 width:85%;
+					 margin:10px auto 0 auto;
+					 background-color:#ffffff;		 
+				}				
+				
+				.item-type-move .item-hover .mask {
+					background-color:#000;
+					opacity:0.5;
+					-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+					filter: alpha(opacity=50);					
+					z-index:0;
+				}
+				
+				.item-type-move .item-hover:hover {
+					opacity:1;
+				}				
+
+				.item-type-move .item-hover:hover .item-info .headline {
+					top:35%;
+				}				
+
+				.item-type-move .item-hover:hover .item-info .downline {
+					bottom:35%;
+				}
+				
+
+				
+			.item-img {			
+				background-color:#7a548f;
+				z-index:0;			
+			}
 footer{
-width: 100%;
-color: #f0f0f0;
+width: 940px;
+margin: 0 auto;
+background-color: black;
+color: #ccc;
+
 }
-.footer_cont{
-	padding-top: 5px;
+.footer-cont{
 	font-size: 0.75em;
+	height: 65px;
+	background-color: black;
 }
 .contacts{
 	float: left;
 	padding-left: 10px;
 }
 .contacts a{
-	color: #f0f0f0;
+	color: #ccc;
 	text-decoration: underline;
 }
 .rights{
@@ -188,6 +375,61 @@ color: #f0f0f0;
 	font-size: 1.3em;
 
 }
-@media{
 
+/*НАВИГАЦИЯ*/
+.info{
+	float: left;
+}
+#GMapContainer{
+	width: 600px;
+	height: 460px;
+	float: right;
+}
+.container-contacts {
+	width: 940px;
+	height: 475px;
+	margin:0 auto;
+	background-color: white;
+	}
+.container-contacts p{
+	text-indent: 10px;
+	padding: 5px;
+}
+	.container-about {
+	width: 940px;
+	height: 475px;
+	margin:0 auto;
+	background-color: white;
+	}
+	.bg{
+		padding-top: 22px;
+		height: 248px;
+		width: 100%;
+		background-image: url(img/about.jpg);
+		opacity:0.6;
+	}
+	.bg1{
+		padding-top: 22px;
+		height: 312px;
+		width: 100%;
+		background-image: url(img/concn.jpg);
+		opacity:0.6;
+	}
+		.bg2{
+		padding-top: 22px;
+		height: 295px;
+		width: 100%;
+		background-image: url(img/rep.jpg);
+		opacity:0.6;
+	}
+			.bg3{
+		padding-top: 22px;
+		height: 295px;
+		width: 100%;
+		background-image: url(img/roof.jpg);
+		opacity:0.6;
+	}
+.container-about p{
+padding:5px 10px 5px 10px;
+text-indent: 10px;
 }
