--- a/TernaGR/assets/css/main.css
+++ b/TernaGR/assets/css/main.css
@@ -1802,12 +1802,12 @@
 	body {
 		background: #fff;
 		height: 100%;
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Exo', sans-serif;
 		font-weight: 300;
 		font-size: 18pt;
-		line-height: 1.75em;
+		line-height: 1.2em;
 		color: #39454b;
-		letter-spacing: 0.5px;
+		
 	}
 
 		body.is-loading *, body.is-resizing * {
@@ -1822,12 +1822,12 @@
 		}
 
 	input, textarea, select {
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Exo', sans-serif;
 		font-weight: 300;
 		font-size: 18pt;
-		line-height: 1.75em;
+		line-height: 1.2em;
 		color: #39454b;
-		letter-spacing: 0.5px;
+		
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -1842,7 +1842,7 @@
 
 	h2 {
 		font-size: 2.25em;
-		letter-spacing: -2px;
+		
 		line-height: 1.25em;
 	}
 
@@ -1887,11 +1887,11 @@
 	}
 
 	p, ul, ol, dl, table {
-		margin-bottom: 1em;
+		margin-bottom: 0.2em;
 	}
 
 	header {
-		margin-bottom: 1em;
+		margin-bottom: 0.2em;
 	}
 
 		header p {
@@ -1947,11 +1947,8 @@
 		.image img {
 			display: block;
 			width: 100%;
-			box-shadow: 0 0 15px rgba(0,0,0,0.5);
 		}
-		.image.fit:hover{
-		box-shadow: 0 0 15px rgba(27,251,248,0.5);	
-		}
+
 		.image.featured {
 			display: block;
 			width: 100%;
@@ -2144,7 +2141,7 @@
 		.button.anchored,
 		button.anchored {
 			position: absolute;
-			left: 50%;
+			left: 95%;
 		}
 
 		input[type="button"]:hover,
@@ -2169,8 +2166,8 @@
 		.button.style2,
 		button.style2 {
 			background-color: transparent;
-			border: solid 2px #e5e6e7;
-			color: inherit;
+			border: solid 3px #e5e6e7;
+			
 		}
 
 			input[type="button"].style2:hover,
@@ -2192,18 +2189,17 @@
 /* Box */
 
 	.box {
-		background: #eae7e7;
-		color: #39454b;
+		background: rgba( 255, 255, 255, 0.7);
+
+		color: 	#39454b;
 		padding: 2em;
-		box-shadow: 0 0 15px rgba(0,0,0,0.7)
+		
 	}
 
 		.box.style2 {
-			padding: 0em 2.5em 3.5em 2.5em;
+			padding: 3.5em 2.5em 3.5em 2.5em;
 		}
-		.box1.style2{
-			padding: 0 2.5em 3.5em 2.5em;
-}
+
 /* Main */
 
 	.main {
@@ -2224,7 +2220,7 @@
 			.main.style1 h2 {
 				font-size: 4.25em;
 				line-height: 1em;
-				letter-spacing: -4px;
+				
 			}
 
 			.main.style1:before {
@@ -2669,7 +2665,7 @@
 			transform-origin: 50% 50%;
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			font-family: FontAwesome;
+			font-family: 'Exo', sans-serif;
 			font-style: normal;
 			font-weight: normal;
 			text-transform: none !important;
@@ -2740,7 +2736,7 @@
 
 		.icon:before {
 			display: inline-block;
-			font-family: FontAwesome;
+			font-family: 'font-awesome', sans-serif;
 			font-size: 1.25em;
 			text-decoration: none;
 			font-style: normal;
@@ -2765,7 +2761,7 @@
 		background: #fff;
 		background: rgba(255, 255, 255, 0.95);
 		height: 3em;
-		line-height: 3em;
+		line-height: 2em;
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
 	}
 
@@ -2779,7 +2775,7 @@
 		top: 0;
 		height: 3em;
 		line-height: 3em;
-		letter-spacing: -1px;
+		
 	}
 
 		#logo a {
@@ -2992,7 +2988,7 @@
 				animation: spinner-rotate 0.75s infinite linear !important;
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
-				font-family: FontAwesome;
+				font-family: 'Exo', sans-serif;
 				font-style: normal;
 				font-weight: normal;
 				text-transform: none !important;
@@ -3274,7 +3270,7 @@
 
 			h2 {
 				font-size: 1.5em;
-				letter-spacing: -1px;
+				
 			}
 
 		/* Box */
@@ -3284,7 +3280,7 @@
 			}
 
 				.box.style2 {
-					padding: 1.5em 1.25em 1.5em 1.25em;
+				
 					background-color: rgba(255, 255, 255, 0.9);
 				}
 
@@ -3300,7 +3296,7 @@
 
 				.main.style1 h2 {
 					font-size: 3em;
-					letter-spacing: -3px;
+					
 				}
 
 			.main.style2 {
@@ -3398,3 +3394,6 @@
 			}
 
 	}
+.tech{
+	background: #eee;
+}
