--- a/Project2/main.css
+++ b/Project2/main.css
@@ -82,22 +82,13 @@ header{
 .sn .tw{
 	background-position: -48px 0;
 }
-
-
 /*BANNER*/
-
-
 .banner{
-	width: 100%;
 	height: 350px;
-	background-image: url(img/banner_bg.jpg);
-	background-repeat: no-repeat;	
+	background: url(img/banner_bg.jpg) no-repeat center;
 	border-bottom: 1px solid #8faec3;
 }
-.banner_cont{
-	width: 1000px;
-	margin: 0 auto;
-}
+
 .banner_cont h1{
 	color: #fff;
 	font-size: 50px;
@@ -205,7 +196,6 @@ header{
 	float: left;
 	line-height: 20px;
 	font-size: 13px;
-
 }
 /*WHY WE?*/
 .main_cont_top{
