--- a/Ternovsky/assets/css/style.css
+++ b/Ternovsky/assets/css/style.css
@@ -54,7 +54,7 @@ body{
 .rg-caption p{
 	font-size:11px;
 	letter-spacing:2px;
-	font-family: 'Exo', sans-serif;
+	font-family: 'CountryWestern_Open', sans-serif;
 	line-height:16px;
 	padding:0 15px;
 	text-transform:uppercase;
