--- a/Ternovsky/assets/css/main.css
+++ b/Ternovsky/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
 @import url("font-awesome.min.css");
+@import url("assets/fonts/CountryWestern_Open.ttf");
 
 /*
 	Big Picture by HTML5 UP
@@ -9,7 +10,7 @@
 
 /* Reset */
 
-	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
 		border: 0;
@@ -18,7 +19,7 @@
 		vertical-align: baseline;
 	}
 
-	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+	article, aside, details, figcaption, figure, footer, header, menu, nav, section {
 		display: block;
 	}
 
@@ -32,6 +33,7 @@
 
 	blockquote, q {
 		quotes: none;
+
 	}
 
 	blockquote:before, blockquote:after, q:before, q:after {
@@ -1802,7 +1804,7 @@
 	body {
 		background: #fff;
 		height: 100%;
-		font-family: 'Exo', sans-serif;
+		font-family: 'CountryWestern_Open', sans-serif;
 		font-weight: 300;
 		font-size: 18pt;
 		line-height: 1.2em;
@@ -1822,7 +1824,7 @@
 		}
 
 	input, textarea, select {
-		font-family: 'Exo', sans-serif;
+		font-family: 'CountryWestern_Open', sans-serif;
 		font-weight: 300;
 		font-size: 18pt;
 		line-height: 1.2em;
@@ -2314,6 +2316,24 @@
 			.main.style3.secondary {
 				background: #ddd;
 			}
+			/*style4*/
+
+		.main.style4 {
+			text-align: center;
+			padding: 1em 0 6em 0;
+		}
+
+			.main.style4 .content > header {
+				margin-bottom: 1em;
+			}
+
+			.main.style4.primary {
+				background: #fff;
+			}
+
+			.main.style4.secondary {
+				background: #ddd;
+			}
 
 /* Dark */
 
@@ -2665,7 +2685,7 @@
 			transform-origin: 50% 50%;
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			font-family: 'Exo', sans-serif;
+			font-family: 'CountryWestern_Open', sans-serif;
 			font-style: normal;
 			font-weight: normal;
 			text-transform: none !important;
@@ -2736,7 +2756,7 @@
 
 		.icon:before {
 			display: inline-block;
-			font-family: 'font-awesome', sans-serif;
+			font-family: 'CountryWestern_Open', sans-serif;
 			font-size: 1.25em;
 			text-decoration: none;
 			font-style: normal;
@@ -2818,8 +2838,8 @@
 /* Intro */
 
 	#intro {
-		background: url("images/overlay.png"), url("../../images/intro.jpg");
-		background-size: 256px 256px, cover;
+		background: url("../../images/intro.jpg");
+		background-size: cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
 		background-repeat: repeat, no-repeat;
@@ -2828,8 +2848,8 @@
 /* One */
 
 	#one {
-		background: url("images/overlay.png"), url("../../images/one.jpg");
-		background-size: 256px 256px, cover;
+		background: url("../../images/one.jpg");
+		background-size: cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 	}
@@ -2837,8 +2857,8 @@
 /* Two */
 
 	#two {
-		background: url("images/overlay.png"), url("../../images/two.jpg");
-		background-size: 256px 256px, cover;
+		background: url("../../images/two.jpg");
+		background-size: cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 	}
@@ -2988,7 +3008,7 @@
 				animation: spinner-rotate 0.75s infinite linear !important;
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
-				font-family: 'Exo', sans-serif;
+				font-family: 'CountryWestern_Open', sans-serif;
 				font-style: normal;
 				font-weight: normal;
 				text-transform: none !important;
