--- a/GuestHouse/stylesheets/cust.css
+++ b/GuestHouse/stylesheets/cust.css
@@ -1,3 +1,47 @@
-.room ul {
-	list-style: square outside;
+.room-list span{
+	font-weight: bold;
+}
+.room-list ul {
+	list-style: square;
+	}
+
+.but-info {
+	
+	text-decoration:none; 
+ text-align:center; 
+ display: block;
+ width: 150px;
+ padding:5px; 
+ border:solid 1px #f4a46f; 
+ -webkit-border-radius:4px;
+ -moz-border-radius:4px; 
+ border-radius: 4px; 
+ font:18px Arial, Helvetica, sans-serif; 
+   color:#fff; 
+ background-color:#da6f29; 
+ -webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff; 
+ -moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;  
+ box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;  
+  }
+.but-info:hover{
+	background-color: #f4a46f;
+	color: #fff;
+}
+
+#service img{
+	padding-right: 30px;
+	margin: 0 auto;
+
+}
+.room-img img{
+	display: block;
+	width: 70%;
+	
+	border: 3px solid #da6f29;
+}
+.teambox img{
+	float: left;
+	display: block;
+	margin:0 auto;
+	padding: 10px;
 }
