--- a/GuestHouse/stylesheets/style.css
+++ b/GuestHouse/stylesheets/style.css
@@ -2,7 +2,7 @@
 /* Global Reset & Standards ---------------------- */
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 html { font-size: 62.5% }
-body { font-family: DroidSansRegular, "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; font-size: 13px; line-height: 20px; color: #666; position: relative; -webkit-font-smoothing: antialiased; }
+body { font-family: DroidSansRegular, "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; font-size: 13px; color: #666; position: relative; -webkit-font-smoothing: antialiased; }
 /* Links ---------------------- */
 a { color: #2ba6cb; text-decoration: none; line-height: inherit; }
 a:hover { color: #2795b6 }
@@ -146,6 +146,8 @@ form.custom .custom.disabled { background-color: #ddd }
 @font-face { font-family: 'BitterItalic'; src: url('fonts/Bitter-Italic-webfont.eot'); src: url('fonts/Bitter-Italic-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/Bitter-Italic-webfont.woff') format('woff'), url('fonts/Bitter-Italic-webfont.ttf') format('truetype'), url('fonts/Bitter-Italic-webfont.svg#BitterItalic') format('svg'); font-weight: normal; font-style: normal; }
 @font-face { font-family: 'BitterBold'; src: url('fonts/Bitter-Bold-webfont.eot'); src: url('fonts/Bitter-Bold-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/Bitter-Bold-webfont.woff') format('woff'), url('fonts/Bitter-Bold-webfont.ttf') format('truetype'), url('fonts/Bitter-Bold-webfont.svg#BitterBold') format('svg'); font-weight: normal; font-style: normal; }
 @font-face { font-family: 'ChunkFiveRegular'; src: url('fonts/Chunkfive-webfont.eot'); src: url('fonts/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/Chunkfive-webfont.woff') format('woff'), url('fonts/Chunkfive-webfont.ttf') format('truetype'), url('fonts/Chunkfive-webfont.svg#ChunkFiveRegular') format('svg'); font-weight: normal; font-style: normal;}
+@font-face { font-family: 'FontAwesome'; src: url('fonts/fontawesome-webfont.eot'); src: url('fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype') }
+
 /* Correct FF custom dropdown height */
 @-moz-document url-prefix() { 
 	form.custom div.custom.dropdown a.selector { height: 30px }
@@ -724,11 +726,11 @@ ul.flyout, .nav-bar li ul {
 #filters { margin-bottom: 10px; padding: 0; }
 #filters li { float: left; list-style: none; margin-right: 5px; margin-bottom: 10px; }
 #filters li a { padding: 6px 15px 2px 15px; text-decoration: none; font-size: 12px; }
-.portofoliothumboverlay { position: absolute; top: 0; left: 0; width: 100%; height: 97%; background: rgba(0, 0, 0, 0.8); display: block; opacity: 0; -webkit-transition: opacity 0.25s ease-out; -moz-transition: opacity 0.25s ease-out; -o-transition: opacity 0.25s ease-out; transition: opacity 0.25s ease-out; }
+.portofoliothumboverlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); display: block; opacity: 0; -webkit-transition: opacity 0.25s ease-out; -moz-transition: opacity 0.25s ease-out; -o-transition: opacity 0.25s ease-out; transition: opacity 0.25s ease-out; }
 .portofoliothumboverlay .inner { display: block; text-align: center; position: absolute; top: 47%; left: 37%; }
 .portofoliothumboverlay .viewgallery a { display: block; text-align: center; position: absolute; top: 5%; left: 81%; color: #7e7e7e; font-size: 11px; text-transform: uppercase; }
 .portofoliothumboverlay:hover { -webkit-transition: all .3s ease-in-out; -moz-transition: all .3s ease-in-out; -ms-transition: all .3s ease-in-out; -o-transition: all .3s ease-in-out; transition: all .3s ease-in-out; opacity: 1; }
-.portofoliothumb { position: relative; width: 100%; height: 100%; cursor: pointer; border: none; border: 3px solid #fff; }
+.portofoliothumb { position: relative; width: 90%; height: 100%; cursor: pointer; border: none; border: 1px solid #55a2a6; margin: 0 auto;}
 .portofoliothumb:hover { opacity: 1 }
 .portofoliothumb > img { width: 100%!important; height: 250px; }
 a.projectdetail { background: #33877d; color: #fff; padding: 7px 7px 6px 7px; font-size: 12px; border-radius: 3px; -webkit-transition-property: color, background; -webkit-transition-duration: 1s, 1s; text-shadow: 1px 1px 1px #111; }
@@ -783,7 +785,7 @@ a:focus { outline: none }
 .topborder { border-top: 4px solid }
 .header { height: 80px }
 .logo { margin-top: 34px;margin-bottom: 10px; }
-.logo h4 { font-size: 27px }
+.logo h4 { font-size: 23px }
 .hr { height: 36px }
 .name { display: none }
 .sidebartitle { margin-bottom: 20px; border-bottom: 1px dashed #ccc; padding-bottom: 10px; }
@@ -859,7 +861,7 @@ a:focus { outline: none }
 .teambox h2 { border-bottom: 1px solid rgba(0, 0, 0, 0.3); background: transparent; margin: 10px 40px 0px 40px; -webkit-transform: scale(); -moz-transform: scale(); -o-transform: scale(); -ms-transform: scale(); transform: scale(); color: #333; -webkit-transition: all 0.5s linear; -moz-transition: all 0.5s linear; -o-transition: all 0.5s linear; -ms-transition: all 0.5s linear; transition: all 0.5s linear; -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter: alpha(opacity=0); opacity: 0; }
 .teambox p { color: #333; -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter: alpha(opacity=0); opacity: 0; -webkit-transform: scale(); -moz-transform: scale(); -o-transform: scale(); -ms-transform: scale(); transform: scale(); -webkit-transition: all 0.5s linear; -moz-transition: all 0.5s linear; -o-transition: all 0.5s linear; -ms-transition: all 0.5s linear; transition: all 0.5s linear; }
 .teambox a.info { -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter: alpha(opacity=0); opacity: 0; -webkit-transform: scale(); -moz-transform: scale(); -o-transform: scale(); -ms-transform: scale(); transform: scale(); -webkit-transition: all 0.5s linear; -moz-transition: all 0.5s linear; -o-transition: all 0.5s linear; -ms-transition: all 0.5s linear; transition: all 0.5s linear; }
-.teambox:hover img { -webkit-transform: scale(1.5); -moz-transform: scale(1.5); -o-transform: scale(1.5); -ms-transform: scale(1.5); transform: scale(1.5); }
+.teambox:hover img { -webkit-transform: scale(1.1); -moz-transform: scale(1.1); -o-transform: scale(1.1); -ms-transform: scale(1.1); transform: scale(1.1); }
 .teambox:hover .mask { -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter: alpha(opacity=100); opacity: 1; }
 .teambox:hover h2,
 .teambox:hover p,
@@ -892,6 +894,13 @@ a.tags, .tags a {color:#fff;}
 .gravatar {margin-right:20px;float:left;}
 .commentdate {margin-bottom:7px;color:#aaa;font-size:13px;}
 #subheader {padding:22px 50px 23px 50px !important;}
+#service img{
+	padding-left: 10px;
+	margin: 0 auto;
+}
+#service .teambox{
+	margin: 0 auto;
+}
 *******************************************************************************************************************
 *     Subheader Effects                                                                                                  
 *******************************************************************************************************************/
@@ -999,8 +1008,9 @@ a.tags, .tags a {color:#fff;}
 	color: red;
 }
 .tel{
-	color: green;
+	color: #da6f29;
 	font-size: 20px;
+	border-bottom:1px dashed #da6f29;
 	
 }
 .promo-img{
@@ -1221,6 +1231,9 @@ ul { list-style: none; }
 	padding: 15px 0 15px 40px;
 }
 .room ul {
+	list-style: square inside;
+}
+.room-list ul {
 	list-style: square inside;
 }
 .image_carousel img {
