--- a/GuestHouse/stylesheets/skins/blue.css
+++ b/GuestHouse/stylesheets/skins/blue.css
@@ -34,3 +34,6 @@ a.projectdetail:hover { background: #55a2a6;opacity:1.0;}
 #testimonials {border-left: solid 6px #55a2a6;}
 .ei-title h2{background:#55a2a6;} 
 .header-wrapper{border-top: 4px solid #55a2a6;}
+.red-price h2{
+	background: red;
+}
